--- a/project/app_client/templates/login.html
+++ b/project/app_client/templates/login.html
@@ -1,17 +1,21 @@
 <div class="container wrap p-t-2 p-b-2">
-  <h2>Login</h2>
-  <form ng-controller='LoginController' ng-submit='submit()'>
-    <fieldset class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" ng-model="user.username" placeholder="e.g. allenturner">
-    </fieldset>
-    <fieldset class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" ng-model="user.password" placeholder="Password">
-    </fieldset>
-    <div ng-show="isRejected" class="alert alert-danger" role="alert">
-      <strong>Oh snap!</strong> The username and the password don't match :(.
+  <div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+      <h2 class="p-b-1">Login</h2>
+      <form ng-controller='LoginController' ng-submit='submit()'>
+        <fieldset class="form-group">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" id="username" ng-model="user.username" placeholder="e.g. allenturner">
+        </fieldset>
+        <fieldset class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" ng-model="user.password" placeholder="Password">
+        </fieldset>
+        <div ng-show="isRejected" class="alert alert-danger" role="alert">
+          <strong>Oh snap!</strong> The username and the password don't match :(.
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+  </div>
 </div>
