--- a/project/app_client/templates/home.html
+++ b/project/app_client/templates/home.html
@@ -1,8 +1,29 @@
-<div class="index wrap">
-  <div class="text-xs-center">
+<div ng-controller="Home" ng-class="{index: !isLoggedIn}" class="wrap">
+  <div ng-hide="isLoggedIn" class="text-xs-center">
     <h1 class="display-2">PIXY</h1>
     <h1 class="display">The home for all your photos.</h1>
     <p class="m-y-3">Upload, access, organize, edit, and share your photos from any device, from anywhere in the world.</p>
     <a id="signup" class="btn btn-primary btn-lg m-t-2" href="register">Sign Up</a>
+  </div>
+  <div ng-show="isLoggedIn" class="home p-t-3 text-xs-center">
+    <div ng-repeat="post in posts" class="m-b-3 post">
+      <div class="user-info">
+        <img class="avatar m-r-2" ng-src="{{post.user.avatar}}">
+        <span><a ng-href="/{{post.user.username}}">{{post.user.username}}</a></span>
+        <span class="time">{{post.time}}</span>
+      </div>
+      <div class="home-post">
+        <a ng-href="/posts/{{post._id}}">
+          <img ng-src="{{post.img}}"></img>
+        </a>
+      </div>
+      <div class="home-post-info">
+        <p>{{post.likes.length}} likes</p>
+        <p>
+          <a ng-href="/{{post.user.username}}"><b>{{post.user.username}}</b></a>
+          {{post.desc}}
+        </p>
+      </div>
+    </div>
   </div>
 </div>
