--- a/project/app_client/templates/profile.html
+++ b/project/app_client/templates/profile.html
@@ -11,7 +11,7 @@
         </span>
         <a href="account" ng-show="isCurrentUser" class="btn btn-secondary m-l-2">Edit Profile</a>
       </p>
-      <p class="lead"><b>{{user.fullname}}<b></p>
+      <p class="lead"><b>{{user.fullname}}</b> {{user.bio}}</p>
       <p>
         <span class="lead m-r-3"><b>{{user.posts.length}}</b> posts</span>
         <span class="lead m-r-3"><b>{{user.followers.length}}</b> followers</span>
