--- a/project/app_client/templates/post.html
+++ b/project/app_client/templates/post.html
@@ -1,9 +1,9 @@
 <div ng-controller="PostController" class="text-xs-center wrap">
   <div class="post-div">
-    <div class="image-div" style="background-color: black">
+    <div class="image-div" style="background-color: #FAFAFA">
       <img class="image-img" ng-src="{{post.img}}">
     </div>
-    <div class="desc-div" style="border: 1px solid black">
+    <div class="desc-div" style="border: 1px solid #DDD">
       <div class="post-info text-xs-left p-b-1 p-t-1">
         <img class="post-avatar" ng-src="{{post.user.avatar}}">
         <span class="p-l-1">{{post.user.username}}</span>
@@ -13,12 +13,16 @@
       </div>
       <div class="comments" style="text-align: left">
         <span ng-hide="post.desc === undefined">
-          <a ng-href="/{{post.user.username}}">{{post.user.username}}</a>
+          <a ng-href="/{{post.user.username}}" style="color: black">
+            <b>{{post.user.username}}</b>
+          </a>
           {{post.desc}}
         </span>
         <ul>
           <li ng-repeat="comment in post.comments">
-            <a ng-href="/{{comment.username}}">{{comment.username}}</a>
+            <a ng-href="/{{comment.username}}" style="color: black">
+              <b>{{comment.username}}</b>
+            </a>
             {{comment.body}}
           </li>
         </ul>
