--- a/project/app_client/templates/login.html
+++ b/project/app_client/templates/login.html
@@ -14,6 +14,7 @@
         <div ng-show="isRejected" class="alert alert-danger" role="alert">
           <strong>Oh snap!</strong> The username and the password don't match :(.
         </div>
+        <p>Don't have an account? <a href="/register">Register now!</a></p>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
