--- a/project/app_client/partials/footer.html
+++ b/project/app_client/partials/footer.html
@@ -1,3 +1,6 @@
 <nav class="navbar navbar-dark bg-danger" style="height: 55px">
-  <div class="container text-xs-center"><span>Created by ranggarmaste</span></div>
+  <div class="container">
+    <span>&copy; 2016 Garmastewira</span>
+    <span class="pull-xs-right">Powered with <b>MEAN</b> Stack</span>
+  </div>
 </nav>
