--- a/project/app_client/templates/profile.html
+++ b/project/app_client/templates/profile.html
@@ -14,16 +14,22 @@
       <p class="lead"><b>{{user.fullname}}</b> {{user.bio}}</p>
       <p>
         <span class="lead m-r-3"><b>{{user.posts.length}}</b> posts</span>
-        <span class="lead m-r-3"><b>{{user.followers.length}}</b> followers</span>
-        <span class="lead"><b>{{user.following.length}}</b> following</span>
+        <a href ng-click="getFollowers(user)" data-toggle="modal" data-target="#follower" class="lead m-r-3" style="color: black">
+          <b>{{user.followers.length}}</b> followers
+        </a>
+        <a href ng-click="getFollowing(user)" data-toggle="modal" data-target="#following" class="lead" style="color: black">
+          <b>{{user.following.length}}</b> following
+        </a>
       </p>
     </div>
   </div>
   <div class="row">
     <div ng-show="isCurrentUser" class="col-md-4 col-xs-6 p-b-1 text-xs-center">
-      <a href data-toggle="modal" data-target=".post-image">
-        <img src="/static/img/plus.png" class="img-fluid center-block profpic"/>
-      </a>
+        <a class="plus-photo" href data-toggle="modal" data-target=".post-image">
+          <div>
+            <img src="/static/img/plus.png" class="img-fluid center-block profpic"/>
+          </div>
+        </a>
     </div>
     <div ng-repeat="post in user.posts" class="col-md-4 col-xs-6 p-b-1 text-xs-center picdiv">
       <a href ng-click="setUrl(post)" data-toggle="modal" data-target=".post-detail">
@@ -56,13 +62,59 @@
               <label for="username">Description</label>
               <textarea class="form-control" id="description" ng-model="desc" placeholder="Add some description..."></textarea>
             </fieldset>
-            <button ng-disabled="!postForm.$valid" ng-click="upload(picFile, desc)">Post Image</button>
+            <button class="btn btn-secondary" ng-disabled="!postForm.$valid" ng-click="upload(picFile, desc)">Post Image</button>
           </form>
         </div>
       </div>
     </div>
   </div>
   <!-- /modal -->
+
+  <!-- Followers modal -->
+  <div class="modal fade" id="follower" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="myModalLabel">Followers</h4>
+        </div>
+        <div class="modal-body text-xs-left">
+          <div class="user-info" ng-repeat="follower in followers">
+            <img class="avatar m-r-2" ng-src="{{follower.avatar}}">
+            <span>
+              <a class="followerLink" ng-href="/{{follower.username}}" target="_self"><b>{{follower.username}}</b></a>
+            </span>
+            <span style="margin-left: auto">{{follower.fullname}}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Following modal -->
+  <div class="modal fade" id="following" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="myModalLabel">Following</h4>
+        </div>
+        <div class="modal-body text-xs-left">
+          <div class="user-info" ng-repeat="follow in following">
+            <img class="avatar m-r-2" ng-src="{{follow.avatar}}">
+            <span>
+              <a class="followingLink" ng-click="hideFollowing()" ng-href="/{{follow.username}}" target="_self"><b>{{follow.username}}</b></a>
+            </span>
+            <span style="margin-left: auto">{{follow.fullname}}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script src="static/scripts/adjust.js"></script>
