--- a/project/public/css/home.css
+++ b/project/public/css/home.css
@@ -7,7 +7,7 @@
   justify-content: center;
   overflow: hidden;
   background-image: url("../img/index-background.jpg");
-  background-size: 100% 100%;
+  background-size: cover;
   color: white;
 }
 
