--- a/Proyek - Theo/style.less
+++ b/Proyek - Theo/style.less
@@ -1,15 +1,30 @@
 // out: style.css, sourcemap: false, compress: false
 
+///////////////
+//Variable
 @lightRed:   #fdd;
 @lightGreen: #dfd;
 @lightBlue: #ddf;
 
 @defaultThemeColor:@lightGreen;
 
+@calendarWidth: 45*7px;
+
+///////////////
+//Mixins
+.boxed{
+  text-align: center;
+  width: @calendarWidth/7;
+  height: @calendarWidth/7;
+  display: inline-block;
+  //border-style: solid;
+}
+
+///////////////
+//Main CSS
 .calendar{
   background-color:@defaultThemeColor;
-  display: inline-block;
-  box-sizing: border-box;
+  width: @calendarWidth;
 
   .calendarHeader{
     display: block;
@@ -19,15 +34,23 @@
     .monthName{
       font-family: sans-serif;
     }
-
   }
 
-  .weekNames{
-    display: inline;
-    box-sizing: border-box;
-    clear: both;
-    .day{
-      padding: 3%;
+  .calendarTable{
+    .dayNames{
+
+      .day{
+        border: 1px solid black;
+      }
+    }
+
+    .dateRow{
+
+      .date{
+        border: 1px solid black;
+      }
     }
   }
+
+
 }
